libs/resources/KisResourceQueryMapper.h
@@ -17,12 +17,10 @@ public:
      * @brief variantFromResourceQuery returns a QVariant for the given column and or role
      * @param query the query: it supposed to be in the right position already
      */
-    static QVariant variantFromResourceQuery(const QSqlQuery &query, int column, int role);
-
-    static QVariant variantFromResourceQueryById(int resourceId, int column, int role);
+    static QVariant variantFromResourceQuery(const QSqlQuery &query, int column, int role, bool useResourcePrefix);
 
 private:
-    static QImage getThumbnailFromQuery(const QSqlQuery &query);
+    static QImage getThumbnailFromQuery(const QSqlQuery &query, bool useResourcePrefix);
 };
 
 #endif // KISRESOURCEQUERYMAPPER_H
